WIP ProductDetails page

--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -3,6 +3,7 @@ nav {
   position: sticky;
   top: 0;
   justify-content: space-between;
+  background-color: white;
   ul {
     width: 50%;
     font-size: 1.5rem;
