--- a/client/src/components/MenuList.scss
+++ b/client/src/components/MenuList.scss
@@ -4,34 +4,35 @@
     margin: 20px 0;
     background-color: cadetblue;
     width: 100%;
-    // height: 100%;
     list-style-type: none;
     display: grid;
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
-    // grid-auto-rows: 17rem;
+    grid-template-columns: repeat(2, minmax(240px, 1fr));
+    // grid-auto-rows: minmax(40vh, auto);
     grid-gap: 10px;
-
-    .menu::after {
-      padding-bottom: 56.25%;
-      display: block;
-      content: "";
-    }
     .menu {
+      position: relative;
       background-color: white;
       width: 100%;
-      //   height: 25vh;
-      //   max-height: 300px;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: space-between;
       border-radius: 15px;
       box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);
 
+      &:after {
+        padding-bottom: 56.25%;
+        display: block;
+        content: "";
+      }
       .menu__img {
         width: 100%;
         height: 40%;
         text-align: right;
-        //   position: relative;
         overflow: hidden;
         img {
-          // position: absolute;
           border-radius: 20px;
           margin: -60px 0px -75px 0;
           max-width: 50%;
@@ -40,6 +41,11 @@
       }
       .menu__description {
         min-height: 110px;
+      }
+      .menu__reservation {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
       }
     }
   }
