--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -25,20 +25,24 @@ body {
   // height: 100%;
 }
 
+// Form Styling //
+
 .form-container {
   display: flex;
   flex-direction: column;
   background-color: whitesmoke;
   align-items: center;
   width: 100%;
+  border: 1px solid black;
   form {
     width: 80%;
     padding: 1rem;
     input {
       width: 100%;
-      height: 2rem;
+      height: 2.5rem;
       display: block;
       margin-bottom: 1rem;
+      border-radius: 8px;
     }
   }
 }
