--- a/client/src/components/MenuList.scss
+++ b/client/src/components/MenuList.scss
@@ -1,5 +1,8 @@
 .menuList__container {
   height: 100%;
+  a {
+    text-decoration: none;
+  }
   .menuList {
     margin: 20px 0;
     background-color: cadetblue;
@@ -9,6 +12,7 @@
     grid-template-columns: repeat(2, minmax(240px, 1fr));
     // grid-auto-rows: minmax(40vh, auto);
     grid-gap: 10px;
+
     .menu {
       position: relative;
       background-color: white;
@@ -27,25 +31,12 @@
         display: block;
         content: "";
       }
-      .menu__img {
-        width: 100%;
-        height: 40%;
-        text-align: right;
-        overflow: hidden;
-        img {
-          border-radius: 20px;
-          margin: -60px 0px -75px 0;
-          max-width: 50%;
-          height: auto;
-        }
-      }
-      .menu__description {
-        min-height: 110px;
-      }
+
       .menu__reservation {
         display: flex;
         justify-content: space-around;
         align-items: center;
+        height: 15%;
       }
     }
   }
