searchbar/search connected

--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -3,7 +3,7 @@ nav {
   position: sticky;
   top: 0;
   justify-content: space-between;
-  background-color: #10af29;
+  background-color: #00503c;
   z-index: 10;
   ul {
     width: 80%;
