--- a/client/src/pages/ProductDetails.scss
+++ b/client/src/pages/ProductDetails.scss
@@ -2,20 +2,48 @@
   width: 90%;
   margin: 0 auto;
   .product__display {
-    width: 50%;
+    width: 90%;
 
     .detail__img {
       width: 100%;
       max-width: 600px;
-
+      margin-bottom: 1rem;
       img {
         width: 100%;
         max-height: 450px;
       }
     }
     .detail__info {
+      h3 {
+        border-bottom: 1px solid black;
+        border-top: 1px solid black;
+        padding: 0.5rem;
+        font-size: 1.5rem;
+      }
       display: flex;
       flex-direction: column;
+    }
+
+    .spec {
+      margin: 2rem 0;
+
+      tbody {
+        tr {
+          font-size: 1.25rem;
+          width: 100%;
+
+          th {
+            border-bottom: 1px solid black;
+            text-align: left;
+            width: 150px;
+            padding: 0.8rem 0;
+            color: rgba(0, 0, 0, 0.6);
+          }
+          td {
+            border-bottom: 1px solid black;
+          }
+        }
+      }
     }
   }
 }
