--- a/client/src/pages/Cart.scss
+++ b/client/src/pages/Cart.scss
@@ -1,99 +1,93 @@
-.cart {
-  width: 85%;
-  max-width: 900px;
-  margin: 0 auto;
+@import "../variables.scss";
 
-  .horizontalDisplay {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    // height: 100%;
-
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 90%;
-    border: 1px solid black;
-    // height: 100%;
-    // max-height: 210px;
-    // margin-bottom: 1.5rem;
-    // &:after {
-    //   padding-bottom: 45%;
-    //   display: block;
-    //   content: "";
-    // }
-  }
-
-  .verticalDisplay {
-    border: 1px solid black;
+@media (max-width: $breakpoint-mobile) {
+  .cart {
     width: 90%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 1rem;
-    // height: 100%;
-    // border-right: 1px solid black;
-    .menu {
-      margin: 0 auto;
-      width: 80%;
-      height: 100%;
-      max-height: 400px;
-      &:after {
-        padding-bottom: 56.25%;
-        display: block;
-        content: "";
-      }
-      .menu__img {
-        height: 100%;
-        min-height: 100px;
-        img {
-          width: 100%;
-          height: 100%;
-          // height: 200px;
+    .cart-items {
+      list-style-type: none;
+      .img-description {
+        display: flex;
+        flex-direction: row;
+
+        .cart__img {
+          width: 40%;
+
+          img {
+            width: 100%;
+          }
         }
-      }
-      .menu__description {
-        height: 100%;
-        min-height: 150px;
+        .cart__description {
+          display: flex;
+          flex-direction: column;
+          input {
+            width: 16%;
+          }
+        }
       }
     }
   }
 }
-// .cart__price {
-//   // width: 30%;
-//   border-right: 1px solid black;
-// }
-// .cart__orderBtn {
-//   width: 50%;
-// }
 
-// @media screen and (min-width: 760px) {
-//   // margin: 0 auto;
+// .cart {
+//   width: 85%;
+//   max-width: 900px;
+//   margin: 0 auto;
 
-//   // height: unset;
-//   .cart {
-//     // width: 100%;
-//     // max-width: 950px;
+//   .horizontalDisplay {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
 //     // height: 100%;
-//     // max-height: 100px;
-//     // // max-height: 100px;
-//     // flex-direction: row;
-//     // // background-color: blue;
-//     .cart__img {
-//       width: 22%;
-//       img {
-//         width: 100%;
-//         height: 100%;
+
+//     display: flex;
+//     justify-content: space-between;
+//     margin: 0 auto;
+//     width: 90%;
+//     border: 1px solid black;
+//     // height: 100%;
+//     // max-height: 210px;
+//     // margin-bottom: 1.5rem;
+//     // &:after {
+//     //   padding-bottom: 45%;
+//     //   display: block;
+//     //   content: "";
+//     // }
+//   }
+
+//   .verticalDisplay {
+//     border: 1px solid black;
+//     width: 90%;
+//     margin: 0 auto;
+//     display: flex;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     gap: 1rem;
+//     // height: 100%;
+//     // border-right: 1px solid black;
+//     .menu {
+//       margin: 0 auto;
+//       width: 80%;
+//       height: 100%;
+//       max-height: 400px;
+//       &:after {
+//         padding-bottom: 56.25%;
+//         display: block;
+//         content: "";
 //       }
-//     }
-//     .cart__price {
-//       width: 15%;
-//       border: 1px solid black;
-//     }
-//     .cart__orderBtn {
-//       width: 15%;
-//       border: 1px solid black;
+//       .menu__img {
+//         height: 100%;
+//         min-height: 100px;
+//         img {
+//           width: 100%;
+//           height: 100%;
+//           // height: 200px;
+//         }
+//       }
+//       .menu__description {
+//         height: 100%;
+//         min-height: 150px;
+//       }
 //     }
 //   }
 // }
