--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,4 +1,23 @@
+@import "../variables.scss";
+
 nav {
+  height: 80%;
+  .title {
+    display: flex;
+    width: 40%;
+    align-items: center;
+    max-height: 40px;
+    max-width: 250px;
+    img {
+      border-radius: 10px;
+      width: 95%;
+      height: 90%;
+      // height:0%;
+    }
+    h1 {
+      font-size: 1.5rem;
+    }
+  }
   display: flex;
   position: sticky;
   top: 0;
@@ -7,12 +26,38 @@ nav {
   z-index: 10;
   ul {
     width: 80%;
-    font-size: 1.2rem;
+    a {
+      text-decoration: none;
+      color: white;
+    }
+
+    font-size: 1rem;
     list-style-type: none;
     display: flex;
     justify-content: flex-end;
     li {
-      margin-left: 1rem;
+      // margin-left: 1.2rem;
+      padding: 0.4rem;
+    }
+  }
+}
+
+@media (max-width: $breakpoint-mobile) {
+  nav {
+    ul {
+      font-size: 0.8rem;
+    }
+  }
+}
+
+@media (min-width: $breakpoint-pc) {
+  nav {
+    ul {
+      // width: 80%;
+      li {
+        width: 14%;
+        text-align: center;
+      }
     }
   }
 }
