--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -38,6 +38,10 @@ nav {
     li {
       // margin-left: 1.2rem;
       padding: 0.4rem;
+      button {
+        font-size: 1rem;
+        font-weight: 600;
+      }
     }
   }
 }
