--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -35,19 +35,27 @@ body {
 .form-container {
   display: flex;
   flex-direction: column;
-  background-color: whitesmoke;
+  flex-wrap: wrap;
+  // background-color: whitesmoke;
   align-items: center;
+  justify-content: center;
   width: 100%;
-  border: 1px solid black;
+  height: 100%;
+  // border: 1px solid black;
   form {
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    // gap: 1rem;
+    height: 100%;
+    width: 90%;
+    gap: 1rem;
+    max-width: 450px;
     padding: 1rem;
-    input {
-      width: 100%;
-      height: 2.5rem;
-      display: block;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-    }
+    // input {
+    //   width: 100%;
+    //   // height: 2.5rem;
+    //   display: block;
+    //   // margin-bottom: 1rem;
+    // }
   }
 }
