--- a/client/src/pages/Join/Join.scss
+++ b/client/src/pages/Join/Join.scss
@@ -1,18 +1,19 @@
 // .form-container {
-//   display: flex;
-//   flex-direction: column;
-//   background-color: whitesmoke;
-//   align-items: center;
-//   width: 100%;
-
-//   form {
-//     width: 80%;
-//     padding: 1rem;
-//     input {
-//       width: 100%;
-//       height: 2rem;
-//       display: block;
-//       margin-bottom: 1rem;
+//   .custormer__input {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     .custormer__input--icon {
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       background-color: rgba(0, 0, 0, 0.5);
+//       width: 5%;
+//       height: 100%;
+//       .fa-icon {
+//         height: 100%;
+//         font-size: 2rem;
+//       }
 //     }
 //   }
 // }
