--- a/client/src/pages/Join/Join.scss
+++ b/client/src/pages/Join/Join.scss
@@ -1,19 +1,37 @@
-// .form-container {
-//   .custormer__input {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     .custormer__input--icon {
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       background-color: rgba(0, 0, 0, 0.5);
-//       width: 5%;
-//       height: 100%;
-//       .fa-icon {
-//         height: 100%;
-//         font-size: 2rem;
-//       }
-//     }
-//   }
-// }
+.address {
+  display: flex;
+  width: 100%;
+  height: 70px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 1.5rem;
+  .address__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: rgba(245, 245, 245, 1);
+    .fa-icon {
+      color: #cccccc;
+    }
+  }
+  .address__input {
+    width: 100%;
+    .find-address {
+      height: 50%;
+      input {
+        width: 70%;
+        height: 100%;
+      }
+    }
+
+    .detail-address {
+      width: 100%;
+      height: 50%;
+      input {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
