--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,15 +1,14 @@
 .button-component {
-  background-color: #166936;
-  border-radius: 60px;
+  background-color: #346aff;
+  // border-radius: 60px;
   font-size: 1.2rem;
-  padding: 0.3rem 0.6rem;
-  color: white;
-  font-weight: 500;
+  padding: 0.5rem 1rem;
+  color: #ffffff;
+  font-weight: 600;
   border: none;
   cursor: pointer;
   &:hover {
-    background-color: #fec52f;
-    transition: 0.3s ease-in-out;
-    font-weight: 600;
+    background-color: #0f5ca8;
+    transition: 0.5s ease-in-out;
   }
 }
