--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -9,9 +9,9 @@ nav {
     max-height: 40px;
     max-width: 250px;
     img {
-      border-radius: 10px;
+      // border-radius: 10px;
       width: 95%;
-      height: 90%;
+      height: 100%;
       // height:0%;
     }
     h1 {
@@ -22,10 +22,10 @@ nav {
   position: sticky;
   top: 0;
   justify-content: space-between;
-  background-color: #193c65;
+  background-color: #4285f4;
   z-index: 10;
   ul {
-    width: 70%;
+    width: 60%;
     a {
       text-decoration: none;
       color: white;
@@ -36,13 +36,21 @@ nav {
     display: flex;
     justify-content: flex-end;
     li {
+      // width: 10%;
       // margin-left: 1.2rem;
-      padding: 0.4rem;
+      // padding: 0.4rem;
+      // display: flex;
+      margin: auto;
+      text-align: center;
       button {
         font-size: 1rem;
+        background-color: #00082a;
         font-weight: 600;
-        // background-color: #7c64d2;
-        color: white;
+        text-decoration: none;
+        border: none;
+        background-color: #fff;
+        color: #00082a;
+        padding: 0.25rem;
       }
     }
   }
@@ -52,6 +60,7 @@ nav {
   nav {
     ul {
       font-size: 0.8rem;
+      width: 70%;
     }
   }
 }
