--- a/client/src/components/DisplayMyPage/DisplayMyPage.scss
+++ b/client/src/components/DisplayMyPage/DisplayMyPage.scss
@@ -1,4 +1,7 @@
-.mypage {
+.mypage__container {
+  width: 90%;
+  margin: 0 auto;
+
   .my-info__data {
     display: flex;
     gap: 1rem;
@@ -6,7 +9,30 @@
       display: flex;
       flex-direction: column;
     }
-
+  }
+  .my-order {
     display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    li {
+      list-style-type: none;
+    }
+    margin-bottom: 2rem;
+    gap: 1rem;
+    .my-order__order-info {
+      .my-order__order-list {
+        li {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+      width: 80%;
+    }
+    .my-order__shipping-addr {
+      .shipping-addr {
+        display: flex;
+        flex-direction: column;
+      }
+    }
   }
 }
