Added Admin account && pages

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -3,6 +3,9 @@
 nav {
   height: 80%;
   .title {
+    a {
+      height: 100%;
+    }
     display: flex;
     width: 40%;
     align-items: center;
