--- a/client/src/components/DisplayItem/DisplayItem.scss
+++ b/client/src/components/DisplayItem/DisplayItem.scss
@@ -16,8 +16,12 @@
     // border: 1px solid black;
     .item__img {
       width: 100%;
+
+      padding: 0 2.5rem;
+      text-align: center;
       img {
-        width: 100%;
+        width: 80%;
+        max-width: 120px;
       }
     }
     .item__descriptions {
