--- a/client/src/pages/ProductDetails/ProductDetails.scss
+++ b/client/src/pages/ProductDetails/ProductDetails.scss
@@ -1,12 +1,14 @@
+@import "../../variables.scss";
+
 .product-container {
   width: 90%;
   margin: 0 auto;
   .product__display {
     width: 90%;
-
+    margin: 0 auto;
     .detail__img {
       width: 100%;
-      max-width: 600px;
+      max-width: 650px;
       margin-bottom: 1rem;
       img {
         width: 100%;
@@ -33,17 +35,32 @@
           width: 100%;
 
           th {
-            border-bottom: 1px solid black;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.2);
             text-align: left;
             width: 150px;
             padding: 0.8rem 0;
             color: rgba(0, 0, 0, 0.6);
           }
           td {
-            border-bottom: 1px solid black;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.2);
           }
         }
       }
     }
+  }
+}
+
+@media (min-width: $breakpoint-tablet) {
+  .product__display {
+    display: flex;
+    justify-content: space-evenly;
+    // align-items: flex-end;
+    .detail__img {
+      width: 10%;
+    }
+    .detail__info {
+      width: 30%;
+    }
+    // flex-direction: row;
   }
 }
