--- a/client/src/components/Admin/ItemListDisplay.scss
+++ b/client/src/components/Admin/ItemListDisplay.scss
@@ -8,6 +8,7 @@
       //   text-align: left;
       .item-img {
         height: 100px;
+        text-align: center;
         img {
           //   width: 100%;
           height: 100%;
