--- a/client/src/pages/ProductDetails/ProductDetails.scss
+++ b/client/src/pages/ProductDetails/ProductDetails.scss
@@ -51,16 +51,25 @@
 }
 
 @media (min-width: $breakpoint-tablet) {
-  .product__display {
-    display: flex;
-    justify-content: space-evenly;
-    // align-items: flex-end;
-    .detail__img {
-      width: 10%;
+  .product-container {
+    // width: 70%;
+    .product__display {
+      display: flex;
+      justify-content: space-evenly;
+      // align-items: flex-end;
+      .detail__img {
+        width: 10%;
+      }
+      .detail__info {
+        width: 40%;
+      }
+      // flex-direction: row;
     }
-    .detail__info {
-      width: 30%;
-    }
-    // flex-direction: row;
+  }
+}
+
+@media (min-width: $breakpoint-pc) {
+  .product-container {
+    width: 65%;
   }
 }
