--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,81 +1,132 @@
 @import "../../variables.scss";
 
-nav {
-  height: 80%;
-  .title {
-    a {
-      height: 100%;
-    }
-    display: flex;
-    width: 40%;
-    align-items: center;
-    max-height: 40px;
-    max-width: 250px;
-    img {
-      // border-radius: 10px;
-      width: 95%;
-      height: 100%;
-      // height:0%;
-    }
-    h1 {
-      font-size: 1.5rem;
-    }
-  }
-  display: flex;
-  position: sticky;
-  top: 0;
-  justify-content: space-between;
-  background-color: #4285f4;
-  z-index: 10;
-  ul {
-    width: 60%;
-    a {
-      text-decoration: none;
-      color: white;
-    }
-
-    font-size: 1rem;
-    list-style-type: none;
-    display: flex;
-    justify-content: flex-end;
-    li {
-      // width: 10%;
-      // margin-left: 1.2rem;
-      // padding: 0.4rem;
-      // display: flex;
-      margin: auto;
-      text-align: center;
-      button {
-        font-size: 1rem;
-        background-color: #00082a;
-        font-weight: 600;
-        text-decoration: none;
-        border: none;
-        background-color: #fff;
-        color: #00082a;
-        padding: 0.25rem;
-      }
-    }
-  }
-}
-
-@media (max-width: $breakpoint-mobile) {
-  nav {
-    ul {
-      font-size: 0.8rem;
-      width: 70%;
-    }
-  }
-}
-
-@media (min-width: $breakpoint-pc) {
-  nav {
-    ul {
-      // width: 80%;
+.nav-container {
+  border-bottom: 1px solid #e4e4e4;
+  width: 100%;
+  // display: block;
+  .bottom-nav {
+    max-width: 1448px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    .bottom-nav__ul {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
       li {
-        width: 14%;
-        text-align: center;
+        list-style-type: none;
+      }
+
+      .search-box {
+        width: 90%;
+        margin: 0 auto;
+        max-width: 1450px;
+        display: flex;
+        .searchBar {
+          border: 1px solid black;
+          display: flex;
+          width: 100%;
+
+          input {
+            width: 100%;
+            border: none;
+          }
+          button {
+            background-color: white;
+            border: none;
+            font-size: 1rem;
+            padding: 0.4rem 0.5rem;
+            margin-left: 0.5rem;
+            &:hover {
+              background-color: black;
+              color: white;
+              transition: 0.5s ease-in-out;
+            }
+          }
+        }
       }
     }
   }
 }
+
+// .nav-container {
+//   width: 100%;
+//   padding: 0.5rem 0;
+//   .bottom-nav {
+//     // width: 100%;
+//     // margin: 0 auto;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     // align-items: ;
+//     // justify-content: space-between;
+//     z-index: 10;
+//     ul {
+//       // margin: auto
+//       width: 20%;
+//       font-size: 1rem;
+//       list-style-type: none;
+//       display: flex;
+//       justify-content: space-between;
+//       padding: 0 0.5rem;
+//       align-items: center;
+//       a {
+//         text-decoration: none;
+//         color: white;
+//       }
+
+//       li {
+//         // width: 10%;
+//         // margin-left: 1.2rem;
+//         // padding: 0.4rem;
+//         // display: flex;
+//         // margin: auto;
+//         .username {
+//           font-weight: 600;
+//           font-size: 1.2rem;
+//           margin-right: 0.5rem;
+//         }
+//         text-align: center;
+//         button {
+//           font-size: 1rem;
+//           background-color: #00082a;
+//           font-weight: 600;
+//           text-decoration: none;
+//           border: none;
+//           background-color: #fff;
+//           color: #00082a;
+//           padding: 0.25rem;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// .fa-icon {
+//   color: black;
+//   font-size: 1.5rem;
+// }
+// .fa-bars {
+//   margin: 0 0.5rem;
+// }
+
+// @media (max-width: $breakpoint-mobile) {
+//   nav {
+//     ul {
+//       font-size: 0.8rem;
+//       width: 70%;
+//     }
+//   }
+// }
+
+// @media (min-width: $breakpoint-pc) {
+//   nav {
+//     ul {
+//       // width: 80%;
+//       li {
+//         width: 14%;
+//         text-align: center;
+//       }
+//     }
+//   }
+// }
