--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 html {
   min-height: 100vh;
 }
@@ -14,6 +18,7 @@ body {
 
 .App {
   height: 100%;
+  position: relative;
   // width: 90%;
   // max-width: 1500px;
   // margin: 0 auto;
@@ -23,7 +28,8 @@ body {
     content: "";
   }
   .body-wrapper {
-    width: 90%;
+    // width: 90%;
+    max-width: 1450px;
     // padding-top: 5rem;
     margin: 2rem auto;
     height: 100%;
