--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,26 +1,46 @@
 @import "../../variables.scss";
 
 .nav-container {
+  background-color: white;
   border-bottom: 1px solid #e4e4e4;
-  width: 100%;
+  position: relative;
+  z-index: 10;
+  // width: 100%;
   // display: block;
   .bottom-nav {
+    padding: 0.5rem 1.5rem;
+    margin: 0 auto;
     max-width: 1448px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+    // width: 100%;
     .bottom-nav__ul {
       display: flex;
-      flex-direction: row;
-      width: 100%;
+      justify-content: space-between;
+      margin: 0 auto;
+      // flex-direction: row;
+      // width: 100%;
       li {
         list-style-type: none;
+        font-size: 1.4rem;
       }
-
+      .fa-bars {
+        &:hover {
+          cursor: pointer;
+        }
+      }
+      .fa-cart {
+        margin-right: 1rem;
+        color: black;
+        a {
+          color: black;
+        }
+      }
+      .username {
+        padding: 0 0.2rem;
+        font-weight: 600;
+      }
       .search-box {
-        width: 90%;
-        margin: 0 auto;
-        max-width: 1450px;
+        padding: 0 1rem;
+        width: 85%;
         display: flex;
         .searchBar {
           border: 1px solid black;
@@ -49,84 +69,21 @@
   }
 }
 
-// .nav-container {
-//   width: 100%;
-//   padding: 0.5rem 0;
-//   .bottom-nav {
-//     // width: 100%;
-//     // margin: 0 auto;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     // align-items: ;
-//     // justify-content: space-between;
-//     z-index: 10;
-//     ul {
-//       // margin: auto
-//       width: 20%;
-//       font-size: 1rem;
-//       list-style-type: none;
-//       display: flex;
-//       justify-content: space-between;
-//       padding: 0 0.5rem;
-//       align-items: center;
-//       a {
-//         text-decoration: none;
-//         color: white;
-//       }
+.show-sidebar {
+  transform: translateX(-250px);
+}
 
-//       li {
-//         // width: 10%;
-//         // margin-left: 1.2rem;
-//         // padding: 0.4rem;
-//         // display: flex;
-//         // margin: auto;
-//         .username {
-//           font-weight: 600;
-//           font-size: 1.2rem;
-//           margin-right: 0.5rem;
-//         }
-//         text-align: center;
-//         button {
-//           font-size: 1rem;
-//           background-color: #00082a;
-//           font-weight: 600;
-//           text-decoration: none;
-//           border: none;
-//           background-color: #fff;
-//           color: #00082a;
-//           padding: 0.25rem;
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .fa-icon {
-//   color: black;
-//   font-size: 1.5rem;
-// }
-// .fa-bars {
-//   margin: 0 0.5rem;
-// }
-
-// @media (max-width: $breakpoint-mobile) {
-//   nav {
-//     ul {
-//       font-size: 0.8rem;
-//       width: 70%;
-//     }
-//   }
-// }
-
-// @media (min-width: $breakpoint-pc) {
-//   nav {
-//     ul {
-//       // width: 80%;
-//       li {
-//         width: 14%;
-//         text-align: center;
-//       }
-//     }
-//   }
-// }
+@media (min-width: 1650px) {
+  .nav-container {
+    .bottom-nav {
+      .bottom-nav__ul {
+        .fa-bars {
+          display: none;
+        }
+        .search-box {
+          width: 92%;
+        }
+      }
+    }
+  }
+}
