shopping cart page css work

--- a/client/src/pages/Cart/Cart.scss
+++ b/client/src/pages/Cart/Cart.scss
@@ -1,38 +1,74 @@
 @import "../../variables.scss";
 
-@media (max-width: $breakpoint-mobile) {
-  .cart {
-    .cart-items {
+.cart {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1000px;
+  .cart-items {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 2rem;
+    list-style-type: none;
+    li {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    .img-description {
       display: flex;
-      flex-direction: column;
-      width: 90%;
-      margin: 0 auto;
+      flex-direction: row;
       gap: 5rem;
-      list-style-type: none;
-      li {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-      }
-      .img-description {
-        display: flex;
-        flex-direction: row;
+      .cart__img {
+        width: 40%;
 
-        .cart__img {
-          width: 40%;
-
-          img {
-            width: 100%;
-          }
+        img {
+          width: 100%;
         }
-        .cart__description {
-          display: flex;
-          flex-direction: column;
-          input {
-            width: 16%;
-          }
+      }
+      .cart__description {
+        display: flex;
+        flex-direction: column;
+        input {
+          width: 16%;
         }
       }
     }
   }
+
+  .cart_bottom {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+    // flex-direction: column;
+    // justify-content: flex-end;
+    // align-items: flex-end;
+    width: 100%;
+    .empty-div {
+      width: 50%;
+    }
+    .order-summary {
+      width: 50%;
+      max-width: 50%;
+      background-color: #f4f4f4;
+      border: 1px solid #e4e4e4;
+      .total {
+        padding: 1rem;
+        border-bottom: 1px solid #e4e4e4;
+        span:first-child {
+          width: 50%;
+        }
+        span:last-child {
+          float: right;
+        }
+      }
+      .cart__orderBtn {
+        padding: 1rem;
+        float: right;
+      }
+    }
+  }
+}
+
+@media (max-width: $breakpoint-mobile) {
 }
 
 // .cart {
