--- a/client/src/components/DisplayCart/DisplayCart.scss
+++ b/client/src/components/DisplayCart/DisplayCart.scss
@@ -1,10 +1,47 @@
 .cart_item {
+  width: 100%;
+  padding: 0 2rem;
+  .cart__img {
+    width: 100%;
+    max-width: 100px;
+    img {
+      width: 100%;
+    }
+  }
+  position: relative;
   .cart__description {
+    .item-name {
+      font-size: 1rem;
+      letter-spacing: 0;
+    }
+    display: flex;
+    gap: 0.35rem;
+    .info-title {
+      width: 40%;
+      font-weight: 600;
+    }
+    .delete-btn {
+      width: 80px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      // height: 100%;
+      color: dodgerblue;
+      margin: 0.5rem 0;
+      justify-self: flex-start;
+      // align-self: center;
+      &:hover {
+        border-bottom: 1px solid dodgerblue;
+        cursor: pointer;
+      }
+    }
     .rating,
+    .item__total,
+    .item__quantity,
     .item__price {
       display: flex;
       :first-child {
-        width: 20%;
+        width: 30%;
       }
     }
   }
