--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -55,7 +55,7 @@ header {
           align-items: center;
           gap: 0.6rem;
           img {
-            border: 2px solid #d43900;
+            // border: 2px solid #d43900;
             // max-width: 100px;
             border-radius: 50%;
             width: 20%;
