--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 99;
+  z-index: 150;
   background-color: rgba(0, 0, 0, 0.1);
   // background-color: white;
 }
@@ -26,7 +26,7 @@
 .modal > section > header {
   position: relative;
   padding: 16px 64px 16px 16px;
-  background-color: #f1f1f1;
+  color: white;
   font-weight: 700;
 }
 .modal > section > header button {
@@ -37,7 +37,7 @@
   font-size: 21px;
   font-weight: 700;
   text-align: center;
-  color: #999;
+  color: white;
   background-color: transparent;
 }
 .modal > section > main {
