--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -11,6 +11,7 @@
   transition: transform 0.5s ease-in-out;
   background-color: white;
   ul {
+    color: rgba(0, 0, 0, 0.5);
     // height: 100%;
     // display: flex;
     // flex-direction: column;
@@ -24,6 +25,11 @@
       margin: 20px 0;
       list-style-type: none;
       border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+      &:hover {
+        cursor: pointer;
+        color: black;
+        transition: 0.2s ease-in-out;
+      }
     }
   }
 }
