--- a/client/src/components/DisplayCart/DisplayCart.scss
+++ b/client/src/components/DisplayCart/DisplayCart.scss
@@ -10,6 +10,7 @@
   }
   position: relative;
   .cart__description {
+    width: 20%;
     .item-name {
       font-size: 1rem;
       letter-spacing: 0;
@@ -20,6 +21,7 @@
       width: 40%;
       font-weight: 600;
     }
+
     .delete-btn {
       width: 80px;
       position: absolute;
@@ -46,3 +48,8 @@
     }
   }
 }
+// .item__quantity {
+//   input {
+//     width: 50px;
+//   }
+// }
