--- a/client/src/pages/Cart/Cart.scss
+++ b/client/src/pages/Cart/Cart.scss
@@ -28,7 +28,7 @@
         display: flex;
         flex-direction: column;
         input {
-          width: 16%;
+          width: 35px;
         }
       }
     }
