--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -70,8 +70,17 @@ header {
       }
       .logout-btn {
         display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
+        .logout-btn__username {
+          margin-right: 0.5rem;
+          font-size: 1.4rem;
+          width: 55px;
+          // color: rgba(255, 255, 255, 0.8);
+          color: whitesmoke;
+          font-style: italic;
+        }
+        // flex-direction: ;
+        // justify-content: flex-end;
+        align-items: flex-end;
         button {
           width: 100px;
           font-size: 1rem;
