--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -34,9 +34,10 @@
           color: black;
         }
       }
-      .username {
+      .user-icon {
         padding: 0 0.2rem;
         font-weight: 600;
+        cursor: pointer;
       }
       .search-box {
         padding: 0 1rem;
