Added Manage order page

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -22,7 +22,7 @@ header {
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
-        width: 240%;
+        width: 200%;
 
         div {
           width: 100%;
@@ -63,6 +63,7 @@ header {
           }
           span {
             font-weight: 600;
+            min-width: 100px;
             font-style: italic;
             font-size: 1.2em;
           }
@@ -71,8 +72,8 @@ header {
       .logout-btn {
         display: flex;
         .logout-btn__username {
-          margin-right: 0.5rem;
-          font-size: 1.4rem;
+          margin-right: 1rem;
+          font-size: 1.3rem;
           width: 55px;
           // color: rgba(255, 255, 255, 0.8);
           color: whitesmoke;
@@ -101,6 +102,8 @@ header {
     .admin-menu {
       display: flex;
       flex-direction: column;
+      // width: 100px;
+      // margin-right: 0rem;
       gap: 0.1rem;
       div {
         text-align: center;
