--- a/client/src/components/DisplayItem/DisplayItem.scss
+++ b/client/src/components/DisplayItem/DisplayItem.scss
@@ -13,7 +13,8 @@
     width: 48%;
     max-width: 600px;
     list-style-type: none;
-    // border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
     .item__img {
       width: 100%;
 
