--- a/client/src/components/MessageBoard/MessageBoard.scss
+++ b/client/src/components/MessageBoard/MessageBoard.scss
@@ -12,6 +12,7 @@
       font-size: 1.2rem;
       margin-bottom: 0.5rem;
       line-height: 1.5rem;
+      cursor: pointer;
     }
     .noticeboard__post--info {
       display: flex;
