--- a/client/src/components/MessageBoard/MessageBoard.scss
+++ b/client/src/components/MessageBoard/MessageBoard.scss
@@ -6,6 +6,7 @@
     list-style-type: none;
     margin: 0 auto;
     width: 90%;
+    min-width: 500px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 1.25rem;
     .noticeboard__post--title {
