--- a/client/src/components/MessageBoard/MessageBoard.scss
+++ b/client/src/components/MessageBoard/MessageBoard.scss
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
   .noticeboard__post {
     list-style-type: none;
     margin: 0 auto;
     width: 90%;
-    min-width: 500px;
+    min-width: 435px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 1.25rem;
     .noticeboard__post--title {
@@ -16,6 +17,7 @@
       cursor: pointer;
     }
     .noticeboard__post--info {
+      // width: 100%;
       display: flex;
       .info-head {
         color: rgba(0, 0, 0, 0.4);
@@ -27,6 +29,13 @@
         }
         margin-right: 2rem;
       }
+    }
+  }
+  .write-a-post-button {
+    margin: 1rem auto 0 auto;
+
+    .button-component {
+      width: 430px;
     }
   }
 }
