--- a/client/src/pages/QnA/QnA.scss
+++ b/client/src/pages/QnA/QnA.scss
@@ -4,4 +4,11 @@
     text-align: center;
     margin: 2rem;
   }
+  .write-a-post-button {
+    margin: 1rem auto 0 auto;
+
+    .button-component {
+      width: 430px;
+    }
+  }
 }
