--- a/client/src/components/MessageBoard/MessageBoard.scss
+++ b/client/src/components/MessageBoard/MessageBoard.scss
@@ -11,6 +11,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 1.25rem;
     .noticeboard__post--title {
+      word-wrap: break-word;
       font-size: 1.2rem;
       margin-bottom: 0.5rem;
       line-height: 1.5rem;
