--- a/client/src/pages/Announcement/Announcement.scss
+++ b/client/src/pages/Announcement/Announcement.scss
@@ -1,5 +1,7 @@
 .announcement {
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   header {
     text-align: center;
     margin: 2rem;
@@ -8,6 +10,7 @@
   .write-a-post-button {
     margin: 1rem auto 0 auto;
     .button-component {
+      margin: 0 auto;
       width: 430px;
     }
   }
