--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -25,6 +25,7 @@
 }
 .modal > section > header {
   position: relative;
+  background-color: #184478;
   padding: 16px 64px 16px 16px;
   color: white;
   font-weight: 700;
