--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -70,9 +70,9 @@
   }
 }
 
-.show-sidebar {
-  transform: translateX(-250px);
-}
+// .show-sidebar {
+//   transform: translateX(-250px);
+// }
 
 @media (min-width: 1650px) {
   .nav-container {
