--- a/client/src/components/DisplayCart/DisplayCart.scss
+++ b/client/src/components/DisplayCart/DisplayCart.scss
@@ -1,6 +1,9 @@
+@import "../../variables.scss";
+
 .cart_item {
   width: 100%;
   padding: 0 2rem;
+  position: relative;
   .cart__img {
     width: 100%;
     max-width: 100px;
@@ -8,12 +11,12 @@
       width: 100%;
     }
   }
-  position: relative;
+
   .cart__description {
     width: 20%;
     .item-name {
-      font-size: 1rem;
-      letter-spacing: 0;
+      font-size: 2rem;
+      letter-spacing: 0.5rem;
     }
     display: flex;
     gap: 0.35rem;
@@ -37,7 +40,7 @@
         cursor: pointer;
       }
     }
-    .rating,
+    // .rating,
     .item__total,
     .item__quantity,
     .item__price {
@@ -53,3 +56,19 @@
 //     width: 50px;
 //   }
 // }
+@media (min-width: $breakpoint-pc) {
+  .cart_item {
+    .cart__description {
+      .item-name {
+        font-size: 2.5rem;
+        letter-spacing: 0.5rem;
+      }
+      .item__total,
+      .item__quantity,
+      .item__price {
+        display: flex;
+        font-size: 1.3rem;
+      }
+    }
+  }
+}
