--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -1,21 +1,22 @@
 @import "../../variables.scss";
 
-#sidebar {
+.hide-sidebar {
+  transform: unset;
+  transform: translateX(-230px);
+  background-color: black;
+}
+.sidebar {
   position: absolute;
   top: 10;
   left: 0;
   width: 230px;
   height: 100%;
-  z-index: 2;
+  z-index: 5;
   // transform: translateX(-100%);
   transition: transform 0.5s ease-in-out;
   background-color: white;
   ul {
     color: rgba(0, 0, 0, 0.5);
-    // height: 100%;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
     margin: 5rem 30px;
     font-size: 20px;
     font-weight: 500;
@@ -34,16 +35,13 @@
   }
 }
 
-.show-sidebar {
-  transform: translateX(-230px);
-}
-
 @media (min-width: 1650px) {
-  #sidebar {
+  .sidebar {
     position: absolute;
     // left: 6rem;
-    left: 100px;
-    top: 10;
+    left: 16.5%;
+    // top: ;
+    width: 200px;
   }
   .show-sidebar {
     transform: unset;
