--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,6 +21,8 @@ body {
 .App {
   height: 100%;
   position: relative;
+  min-height: 100vh;
+  // height: 100%;
   // width: 90%;
   // max-width: 1500px;
   // margin: 0 auto;
