--- a/client/src/components/Admin/ItemListDisplay.scss
+++ b/client/src/components/Admin/ItemListDisplay.scss
@@ -1,14 +1,27 @@
 #item-list__table {
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
+  // min-width: 400px;
+  // border: 1px solid black;
   thead {
     width: 70%;
   }
   tbody {
+    th,
+    td {
+      border: 1px solid #444444;
+    }
     tr {
-      //   text-align: left;
+      font-size: 1.2rem;
+      text-align: center;
+      cursor: pointer;
+      &:hover {
+        // font-weight: 600;
+        color: tomato;
+        transition: 0.5s ease-in-out;
+      }
       .item-img {
         height: 100px;
-        text-align: center;
         img {
           //   width: 100%;
           height: 100%;
