--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,11 +1,17 @@
 footer {
-  position: fixed;
+  position: absolute;
+  // position: relative;
   z-index: 15;
-  bottom: 0;
+  // bottom: -100px;
+  // left: 0;
+  bottom: -142px;
+  // right: 0;
   width: 100%;
-  height: 8%;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: cornsilk;
+  color: white;
+  // background-color: cornsilk;
+  background: linear-gradient(to bottom, #002143 -37%, #184478);
 }
