Admin page styling pt.2 && Added fonts

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -74,3 +74,19 @@ body {
     // }
   }
 }
+
+.font-face-BBTreeB {
+  font-family: "BBTreeG_B";
+}
+.font-face-BBTreeR {
+  font-family: "BBTreeG_R";
+}
+.font-face-BBTreeL {
+  font-family: "BBTreeG_L";
+}
+.font-link-Pacifico {
+  font-family: "Pacifico", cursive;
+}
+.font-link-Roboto {
+  font-family: "Roboto", sans-serif;
+}
