--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -62,9 +62,10 @@
             min-width: 40px;
           }
           span {
-            font-weight: 600;
+            font-family: "Pacifico", cursive;
+            // font-weight: 600;
             min-width: 100px;
-            font-style: italic;
+            // font-style: italic;
             font-size: 1.2em;
           }
         }
