--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -21,6 +21,7 @@
     margin: 5rem 0 5rem 30px;
     font-size: 20px;
     font-weight: 500;
+    font-family: "Roboto", sans-serif;
     padding: 1rem;
 
     li {
