--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -72,10 +72,11 @@
       }
       .logout-btn {
         display: flex;
+        // width: 100%;
         .logout-btn__username {
-          margin-right: 1rem;
-          font-size: 1.3rem;
-          width: 55px;
+          font-size: 1.2rem;
+          text-align: center;
+          width: 100%;
           // color: rgba(255, 255, 255, 0.8);
           color: whitesmoke;
           font-style: italic;
@@ -84,8 +85,9 @@
         // justify-content: flex-end;
         align-items: flex-end;
         button {
-          width: 100px;
-          font-size: 1rem;
+          width: 120px;
+          // width: 100%;
+          font-size: 0.9rem;
           font-weight: 600;
           text-decoration: none;
           border: none;
