--- a/client/src/pages/MyPage/DisplayMyPage.scss
+++ b/client/src/pages/MyPage/DisplayMyPage.scss
@@ -87,7 +87,11 @@
       }
       .recipient {
         div h4 {
-          margin-right: 2rem;
+          // margin-right: 2rem;
+          width: 20%;
+        }
+        span {
+          width: 80%;
         }
       }
       div {
@@ -106,6 +110,7 @@
         padding: 0.5rem;
         border-radius: 10px;
         background-color: #f5f5f5;
+
         .receipt__pay-method,
         .receipt__billing-amount {
           justify-content: space-between;
